styled preview images

--- a/templates/default/tpl.series.html
+++ b/templates/default/tpl.series.html
@@ -16,7 +16,7 @@
 <!-- END header -->       
 <!-- BEGIN episodedownload -->     
 <tr>
-  <td><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" /></a></td>
+  <td><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" class="img-thumbnail"/></a></td>
   <td><a href="{CMD_PLAYER}">{TXT_TITLE}</a></td>
   <td>{TXT_DATE}</td>
   <td><a href="{DOWNLOADURL}">{TXT_DOWNLOAD}</a></td>
@@ -24,7 +24,7 @@
 <!-- END episodedownload -->       
 <!-- BEGIN episode -->     
 <tr>
-  <td><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" /></a></td>
+  <td><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" class="img-thumbnail"/></a></td>
   <td><a href="{CMD_PLAYER}">{TXT_TITLE}</a></td>
   <td>{TXT_DATE}</td>
 </tr>
