--- a/templates/edit/edit.html
+++ b/templates/edit/edit.html
@@ -22,7 +22,7 @@
 {{#episodes}}
 <tr>
  <td class="std"><a href="{{viewurl}}">{{title}}</a></td>
- <td class="std"><a href="{{viewurl}}"><img src="{{previewurl}}" /></a></td>
+ <td class="std"><a href="{{viewurl}}"><img src="{{previewurl}}" class="img-thumbnail"/></a></td>
  <td class="std">{{startdate}}</td>
  {{#manualRelease}}<td><a class="btn btn-default" href="{{publishurl}}">{{txt_publish}}</a></td>{{/manualRelease}}
 </tr>
