moved trim init to js

--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -38,7 +38,7 @@
       <div>
         <div>{TXT_INPOINT}</div>
         <div class="input-group">
-          <input value="0:00:00" id="trimin">
+          <input id="trimin">
           <button id="settrimin" type="button" class="btn btn-default">
             <span class="glyphicon"></span> {TXT_SET_TO_CURRENT_TIME}
           </button>
@@ -50,7 +50,7 @@
       <div class="pull-right">
         <div>{TXT_OUTPOINT}</div>
         <div class="input-group">
-          <input value="{TRACKLENGTH}" id="trimout" >
+          <input id="trimout" >
           <button id="settrimout" type="button" class="btn btn-default">
             {TXT_SET_TO_CURRENT_TIME}
           </button>
