Only redraw list when items change

--- a/templates/default/tpl.series.edit.js.html
+++ b/templates/default/tpl.series.edit.js.html
@@ -18,6 +18,13 @@ iliasopencast.translation = {
     txt_none_scheduled : "{TXT_NONE_SCHEDULED}",
     txt_none_onhold : "{TXT_NONE_ONHOLD}",
     txt_delete: "{TXT_DELETE}",
+    txt_edit_metadata: "{TXT_EDIT_METADATA}"
+}
+
+iliasopencast.currentrenderings = {
+		finished : [],
+		onhold : [],
+		scheduled: []
 }
 
 })(iliasopencast);
