--- a/templates/default/tpl.series.html
+++ b/templates/default/tpl.series.html
@@ -19,7 +19,7 @@
   <td><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" class="img-thumbnail"/></a></td>
   <td><a href="{CMD_PLAYER}">{TXT_TITLE}</a></td>
   <td>{TXT_DATE}</td>
-  <td><a href="{DOWNLOADURL}">{TXT_DOWNLOAD}</a></td>
+  <td><a href="{DOWNLOADURL}" download>{TXT_DOWNLOAD}</a></td>
 </tr>
 <!-- END episodedownload -->       
 <!-- BEGIN episode -->     
