Add metadata editing

--- a/templates/edit/edit.html
+++ b/templates/edit/edit.html
@@ -36,8 +36,8 @@
     {{#manualRelease}}
     <li><a class="dropdown-item" href="{{publishurl}}">{{txt_publish_action}}</a></li>
     {{/manualRelease}}
-<!--  <li><a class="dropdown-item" href="#">{{txt.txt_edit_metadata}}</a></li>
-    <li><a class="dropdown-item" href="#">{{txt.txt_delete}}</a></li> -->
+    <li><a class="dropdown-item" href="{{editmetadataurl}}">{{txt.txt_edit_metadata}}</a></li>
+    <!--  <li><a class="dropdown-item" href="#">{{txt.txt_delete}}</a></li> -->
   </ul>
 </div></td>
 </tr>
