Fix issues for running with ilias8

--- a/templates/default/tpl.qrcode.html
+++ b/templates/default/tpl.qrcode.html
@@ -1,7 +1,7 @@
 <div>
 {TXT_QRCODE}
 </div>
-<div>{IMAGE}</div>
+<div style="width: 50%">{IMAGE}</div>
 <div>
 {TXT_VALID_UNTIL}: {VALID_DATE}
 </div>
