--- a/templates/default/tpl.player.html
+++ b/templates/default/tpl.player.html
@@ -1,6 +1,6 @@
-<script src="{INITJS}/js/ployfill.arrayfrom.js"></script>
+<!-- <script src="{INITJS}/js/ployfill.arrayfrom.js"></script>-->
 <script>var ILIAS_THEODUL_PATH = "{INITJS}/";</script>
-<script data-main="{INITJS}/ui/engage_init" src="{INITJS}/ui/js/lib/require.js"></script>
+<!--<script data-main="{INITJS}/ui/engage_init" src="{INITJS}/ui/js/lib/require.js"></script>-->
 <link rel="stylesheet" type="text/css" href="{INITJS}/ui/css/core_global_style.css" />
 <noscript>
   <div class="noJavaScript">
